# training-gpt2-on-stockfish-games

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
apptainer/: base.def  llm-start.sh  llm_train.def
scripts/: wandb_leaderboard.py
src/eval/: self_play.py
src/train/: llm.py
src/utils/: llm_dataset.py
